Mon Mar  9 16:03:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems/installer.rb (Gem::Installer#initialize): env may
	  not be under /usr/bin.

	* lib/rubygems/installer.rb (Gem::Installer#shebang): uses /bin/sh
	  if shebang has any options, since env shebang trick does no
	  work with options.

Mon Mar  9 15:19:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (manpages): use basename to compare and for Tempfile.

Mon Mar  9 14:55:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (default gems): installs default gemspecs.

Mon Mar  9 14:48:08 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (OPTFLAGS): simplified. see [ruby-core:22725]

Mon Mar  9 14:33:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb: prints names of the directories where files are
	  installed to.

Mon Mar  9 02:25:54 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_proc.rb: add some tests.

Mon Mar  9 01:38:00 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_enum.rb: add some tests.

Mon Mar  9 01:12:37 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_object.rb: add a test for Object#method_missing.

Mon Mar  9 01:11:17 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_file_exhaustive.rb: add tests for File#size and
	  File.absolute_path.

Sun Mar  8 23:02:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (LDFLAGS): always prepends -link.

Sun Mar  8 11:39:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF): dirty hack to compute multiple
	  sizeof, for apple's universal binary.

Sat Mar  7 22:06:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (universal_binary): checks if sizes are same on all
	  architectures.

Sat Mar  7 18:45:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: checks if cd really succeeded.

Sat Mar  7 14:24:47 2009  Tanaka Akira  <akr@fsij.org>
