@@ -1,3 +1,7 @@
+Mon Mar  9 16:49:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rake: updated to rake code to rake-0.8.4 source code base.
+
 Mon Mar  9 16:03:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rubygems/installer.rb (Gem::Installer#initialize): env may
